--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rvOrders"/>
 
             <ProgressBar
                 android:id="@+id/progress"
